--- a/system/properties.properties
+++ b/system/properties.properties
@@ -1,1 +1,1 @@
-[["name", "acsia"], ["default-get", "unknown"], ["default-property", "unknown"], ["default-map", "unknown"], ["sentence-splitters", ".!?ãï¼ï¼"], ["learn-filename", "pand_learn.aiml"], ["max-learn-file-size", "1000000"]]
+[["username", "jhv"], ["chamar", "VOU TE CHAMAR NO WHATSAPP"], ["name", "acsia"], ["default-get", "unknown"], ["default-property", "unknown"], ["default-map", "unknown"], ["sentence-splitters", ".!?ãï¼ï¼"], ["learn-filename", "pand_learn.aiml"], ["max-learn-file-size", "1000000"]]
